# DigitRecognition

./: .gitmodules  CMakeLists.txt  ImageSet.txt
src/: main.c
